nestum/tests/ui/fail_external_non_string.rs
use nestum::nestum;

#[nestum]
pub enum Inner { A }

#[nestum]
pub enum Outer {
    #[nestum(external = 123)]
    Wrap(Inner),
}

fn main() {}
